# FL-TEE

./: .gitignore  .gitmodules  README.md  requirements.txt
exp/: exp1-no-dp.sh  exp1.sh  exp10.sh  exp2-no-dp.sh  exp2.sh  exp3-no-dp.sh  exp3.sh  exp4-no-dp.sh  exp4.sh  exp5.sh  exp6-no-dp.sh  exp6.sh  exp7.sh  exp8.sh  exp9.sh  experimental_results.ipynb  federated_dp_baseline.ipynb  test.sh
exp/results/: exp1-no-dp.csv  exp1.csv  exp10.csv  exp2-no-dp.csv  exp2.csv  exp3-no-dp.csv  exp3.csv  exp4-no-dp.csv  exp4.csv  exp5.csv  exp6-no-dp.csv  exp6.csv  exp8.csv  exp9.csv  fedsgd-cdp-20230315091638.txt  fedsgd-cdp-20230315091832.txt  fedsgd-cdp-20230316105644.txt  fedsgd-cdp-20230318235725.txt  fedsgd-cdp-20230319054136.txt  fedsgd-cdp-20230319200551.txt  fedsgd-cdp-20230320061759.txt  fedsgd-ldp-20230318040244.txt  fedsgd-nodp-20230316163408.txt  fedsgd-nodp-20230316233418.txt  fedsgd-nodp-20230317083208.txt  fedsgd-nodp-20230317190108.txt
exp/results-old/: exp3.csv  exp5.csv  exp6.csv
exp/results-old2/: exp1-epoch1.csv  exp1-epoch3.csv  exp1.csv  exp2.csv  exp3.csv  exp4.csv  exp6.csv
proto/: secure_aggregation.proto
secure_aggregation/: Makefile  README.md  exp10.sh  exp7.sh
secure_aggregation/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs
secure_aggregation/app/src/: benchmark.rs  consts.rs  ecalls.rs  ocalls.rs  server.rs  utils.rs
secure_aggregation/app/src/cpp/: encryption.cpp
secure_aggregation/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
secure_aggregation/enclave/src/: advanced.rs  advanced_simple.rs  baseline.rs  bubble_sort_based.rs  client_size_optimized.rs  common.rs  fl_config.rs  fxhash.rs  hash_table.rs  lib.rs  nips19.rs  non_oblivious.rs  oblivious_primitives.rs  oram.rs  parameters.rs  session_key_store.rs
secure_aggregation/results/: advanced-10-5-3-20220427074755UTC.txt  advanced-10000-100-100-20220201125532UTC.txt  advanced-10000-100-100-20220427075122UTC.txt  advanced-10000-1000-100-20220427072929UTC.txt  advanced-10000-1000-100-20220427072941UTC.txt  advanced-10000-1000-100-20220427072947UTC.txt  advanced-10000-1000-100-20220427073201UTC.txt  advanced-10000-5000-100-20220427090407UTC.txt  advanced-100000-1000-100-20220201125854UTC.txt  advanced-100000-1000-100-20220427072527UTC.txt  advanced-100000-1000-100-20220427074828UTC.txt  advanced-100000-1000-100-20220427074910UTC.txt  advanced-100000-1000-100-20220427075127UTC.txt  advanced-1000000-10000-100-20220201134833UTC.txt  advanced-1000000-10000-100-20220427075144UTC.txt  advanced-10000000-100000-100-20220202190801UTC.txt  advanced-10000000-100000-100-20220427082722UTC.txt  advanced-201588-2015-10000-20221121094531UTC.txt  advanced-500-50-100-20220202014143UTC.txt  advanced-50000-500-100-20220201125604UTC.txt  advanced-50000-500-100-20220427075124UTC.txt  advanced-500000-5000-100-20220201130538UTC.txt  advanced-500000-5000-100-20220427075132UTC.txt  advanced-5000000-50000-100-20220201154452UTC.txt  advanced-5000000-50000-100-20220427080559UTC.txt  advanced-50890-5089-10000-20221121045110UTC.txt  advanced_old-10000-100-100-20220201125532UTC.txt  advanced_old-10000-1000-100-20220427072941UTC.txt  advanced_old-100000-1000-100-20220201125854UTC.txt  advanced_old-100000-1000-100-20220427072527UTC.txt  advanced_old-100000-1000-100-20220427074828UTC.txt  advanced_old-1000000-10000-100-20220201134833UTC.txt  advanced_old-10000000-100000-100-20220202190801UTC.txt  (+786 more)
src/: README.md  attack.py  compile_proto.py  computeamplification.py  eval-ldp-sgd.py  ffi_test.py  fl_main.py  models.py  option.py  prepare.py  proto_client.py  sampling.py  secure_aggregation_pb2.py  secure_aggregation_pb2_grpc.py  update.py  utils.py
src/cpp/: encryption.cpp
