[package]
name = "SecureAgg"
version = "0.1.0"
authors = ["FumiyukiKato"]
edition = '2018'

[profile.release]
opt-level = 3

[lib]
name = "secure_agg"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
mc-oblivious-ram = "2.0.0"
aligned-cmov = "2.0.0"
mc-oblivious-traits = "2.0.0"
rand_core = { version = "0.6", default-features = false }
rand_hc = "0.3"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_build_helper = { path = "../incubator-teaclave-sgx-sdk/sgx_build_helper" }
sgx_cov = { path = "../incubator-teaclave-sgx-sdk/sgx_cov" }
sgx_crypto_helper = { path = "../incubator-teaclave-sgx-sdk/sgx_crypto_helper" }
sgx_libc = { path = "../incubator-teaclave-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../incubator-teaclave-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../incubator-teaclave-sgx-sdk/sgx_rand_derive" }
sgx_serialize = { path = "../incubator-teaclave-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../incubator-teaclave-sgx-sdk/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../incubator-teaclave-sgx-sdk/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../incubator-teaclave-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../incubator-teaclave-sgx-sdk/sgx_tcrypto_helper" }
sgx_tdh = { path = "../incubator-teaclave-sgx-sdk/sgx_tdh" }
sgx_tkey_exchange = { path = "../incubator-teaclave-sgx-sdk/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../incubator-teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../incubator-teaclave-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../incubator-teaclave-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_ucrypto = { path = "../incubator-teaclave-sgx-sdk/sgx_ucrypto" }
sgx_unwind = { path = "../incubator-teaclave-sgx-sdk/sgx_unwind" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }
